--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   },
   "homepage": "https://github.com/actions/javascript-action#readme",
   "dependencies": {
-    "@actions/core": "^1.2.5"
+    "@actions/core": "^1.2.5",
+    "@pact-foundation/pact": "^9.15.5"
   },
   "devDependencies": {
     "@vercel/ncc": "^0.27.0",
